
- pts-core: Indicate HIB/LIB result proportion when dumping results as CSV
- pts-core: Introduce new view of system software/hardware details on test run and system-info command
- pts-core: Drop detailed-system-info sub-command now that system-info is more verbose
- pts-core: Eliminate pts_test_downloads_nye_XmlReader
- pts-core: Eliminate pts_parse_results_nye_XmlReader abstraction
- phodevi: Fix for hanging Windows client when requesting disk mount options
- phodevi: Don't rely upon X.Org DDX driver logic for determining GPU frequency since it's not portable to Wayland or with -modesetting DDX

Phoronix Test Suite 7.0.0 Milestone 1
12 January 2017

- pts-core: Add estimate-run-time sub-command for estimating test/suite/result-file run length
- pts-core: More external dependency coverage for BSDs
- pts-core: Cleanup PTS_USER_LOCK / run-lock handling
- pts_Graph: Add "Ryzen" product string to AMD's coloring
- pts_Graph: Add "Pentium" product string to Intel's coloring
- pts_Graph: Add option to disable color branding
- phoromatic: Set by default for SQLite database WAL journal mode / NORMAL synchronous
- phoromatic: Report status updates more often

Phoronix Test Suite 6.8.0-Tana
6 December 2016

- phoromatic: allow clearing warnings/errors of a system from the systems page
- phodevi: Rearrange ATI/AMD graphics checks

Phoronix Test Suite 6.8.0 Milestone 3
28 November 2016

- pts-core: Ubuntu external dependency script fix
- phodevi: Improved video RAM detection via GLX_MESA_query_renderer
- phodevi: GPU detection improvements
- phodevi: vRAM detection change to help AMDGPU-PRO
- phodevi: Other product/model string improvements

Phoronix Test Suite 6.8.0 Milestone 2
15 November 2016

- pts-core: Add new remove_inactive_systems option on systems page
- pts-core: Fix malforming graphs when feeding many line graph results that are in a tracking-like manner that should be compacted to box plot